--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miembros del Club</title>
+</head>
+<body>
+    <h1>Miembros del Club</h1>
 
-    <!-- Importar Firebase SDK desde el CDN -->
+    <!-- Formulario para cargar estadísticas de los jugadores -->
+    <div>
+        <button onclick="getClubMembers()">Cargar Jugadores</button>
+    </div>
+
+    <!-- Sección para mostrar los jugadores y sus estadísticas -->
+    <div id="players-info">
+        <p>Cargando jugadores...</p>
+    </div>
+
     <script type="module">
+        // Configuración de Firebase (CDN)
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
-        import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js";
+        import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js";
 
-        // Configuración de Firebase (debe ser la misma que la configuración de tu proyecto en Firebase)
+        // Configuración de Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyBW-gAKIG7FNanxtur3h2aROaB9XNON40Y",
             authDomain: "juego-multijugador-45b97.firebaseapp.com",
@@ -26,7 +39,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
 
-        // Obtener la lista de jugadores desde Firebase
+        // Obtener miembros del club de Firebase
         async function fetchClubMembers() {
             const playersRef = ref(db, 'players');
             try {
@@ -66,16 +79,49 @@
             playersInfoSection.innerHTML = playersHtml;
         }
 
-        // Cargar la información al inicio
+        // Cargar jugadores cuando se presione el botón
+        async function getClubMembers() {
+            const clubTag = "2UVURRLCC"; // El tag del club
+
+            const apiKey = "tu_api_key_aqui"; // Asegúrate de reemplazar con tu propia API Key de Brawl Stars
+
+            // Obtener jugadores desde la API de Brawl Stars
+            const response = await fetch(`https://api.brawlstars.com/v1/clubs/${clubTag}/members`, {
+                method: 'GET',
+                headers: {
+                    'Authorization': `Bearer ${apiKey}`,
+                    'Content-Type': 'application/json'
+                }
+            });
+
+            if (!response.ok) {
+                console.error('Error al obtener los jugadores del club:', response.statusText);
+                return;
+            }
+
+            const data = await response.json();
+            const members = data.items;
+
+            // Guardar los jugadores en Firebase
+            for (const member of members) {
+                const playerTag = member.tag.replace('#', '');  // Eliminamos el '#' del tag
+                const playerName = member.name;
+                const wins = Math.floor(Math.random() * 1000);  // Para este ejemplo, vamos a simular las victorias
+
+                // Guardamos en Firebase
+                set(ref(db, 'players/' + playerTag), {
+                    name: playerName,
+                    tag: member.tag,
+                    wins: wins
+                });
+            }
+
+            // Actualizamos la vista con los jugadores
+            renderPlayersInfo();
+        }
+
+        // Cargar la lista de jugadores automáticamente al cargar la página
         document.addEventListener('DOMContentLoaded', renderPlayersInfo);
     </script>
-</head>
-<body>
-    <h1>Miembros del Club</h1>
-
-    <!-- Sección para mostrar los jugadores y sus estadísticas -->
-    <div id="players-info">
-        <p>Cargando jugadores...</p>
-    </div>
 </body>
 </html>
