--- a/index.html
+++ b/index.html
@@ -4,26 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miembros del Club</title>
-</head>
-<body>
-    <h1>Miembros del Club</h1>
-
-    <!-- Formulario para cargar estadísticas de los jugadores -->
-    <div>
-        <button onclick="getClubMembers()">Cargar Jugadores</button>
-    </div>
-
-    <!-- Sección para mostrar los jugadores y sus estadísticas -->
-    <div id="players-info">
-        <p>Cargando jugadores...</p>
-    </div>
 
     <script type="module">
-        // Configuración de Firebase (CDN)
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
-        import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js";
+        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js";
 
-        // Configuración de Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyBW-gAKIG7FNanxtur3h2aROaB9XNON40Y",
             authDomain: "juego-multijugador-45b97.firebaseapp.com",
@@ -39,89 +24,81 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
 
-        // Obtener miembros del club de Firebase
-        async function fetchClubMembers() {
-            const playersRef = ref(db, 'players');
-            try {
-                const snapshot = await get(playersRef);
-                if (snapshot.exists()) {
-                    return snapshot.val();
-                } else {
-                    console.log('No hay datos disponibles.');
-                    return {};
-                }
-            } catch (error) {
-                console.error('Error al obtener los datos de Firebase:', error);
-                return {};
+        // Obtener la API Key desde el servidor
+        async function getApiKey() {
+            const response = await fetch('/apikey');
+            if (!response.ok) {
+                console.error('Error al obtener la API key');
+                return null;
             }
+            const data = await response.json();
+            return data.apiKey;
         }
 
-        // Mostrar la información de los jugadores
-        async function renderPlayersInfo() {
-            const players = await fetchClubMembers();
-            const playersInfoSection = document.getElementById('players-info');
-
-            if (Object.keys(players).length === 0) {
-                playersInfoSection.innerHTML = '<p>No se pudo obtener la información de los jugadores.</p>';
-                return;
-            }
-
-            const playersHtml = Object.values(players).map(player => {
-                return `
-                    <div>
-                        <h2>${player.name}</h2>
-                        <p><strong>Tag:</strong> ${player.tag}</p>
-                        <p><strong>Victorias:</strong> ${player.wins}</p>
-                    </div>
-                `;
-            }).join('');
-
-            playersInfoSection.innerHTML = playersHtml;
-        }
-
-        // Cargar jugadores cuando se presione el botón
-        async function getClubMembers() {
-            const clubTag = "2UVURRLCC"; // El tag del club
-
-            const apiKey = "tu_api_key_aqui"; // Asegúrate de reemplazar con tu propia API Key de Brawl Stars
-
-            // Obtener jugadores desde la API de Brawl Stars
-            const response = await fetch(`https://api.brawlstars.com/v1/clubs/${clubTag}/members`, {
+        // Función para obtener miembros del club
+        async function getClubMembers(apiKey) {
+            const clubTag = '2UVURRLCC'; // Tag del club
+            const encodedClubTag = encodeURIComponent(clubTag);  // Esto asegura que el # se convierta en %23
+            const response = await fetch(`https://api.brawlstars.com/v1/clubs/${encodedClubTag}/members`, {
                 method: 'GET',
                 headers: {
-                    'Authorization': `Bearer ${apiKey}`,
-                    'Content-Type': 'application/json'
+                    'Authorization': `Bearer ${apiKey}`
                 }
             });
-
             if (!response.ok) {
-                console.error('Error al obtener los jugadores del club:', response.statusText);
+                console.error('Error al obtener los miembros del club');
+                return [];
+            }
+            const data = await response.json();
+            return data.items;
+        }
+
+        // Subir los datos de los jugadores a Firebase
+        async function uploadPlayerData() {
+            const apiKey = await getApiKey();
+            if (!apiKey) {
+                console.error('No se pudo obtener la API key');
                 return;
             }
 
-            const data = await response.json();
-            const members = data.items;
+            const players = await getClubMembers(apiKey);
 
-            // Guardar los jugadores en Firebase
-            for (const member of members) {
-                const playerTag = member.tag.replace('#', '');  // Eliminamos el '#' del tag
-                const playerName = member.name;
-                const wins = Math.floor(Math.random() * 1000);  // Para este ejemplo, vamos a simular las victorias
-
-                // Guardamos en Firebase
-                set(ref(db, 'players/' + playerTag), {
-                    name: playerName,
-                    tag: member.tag,
-                    wins: wins
-                });
+            if (players.length === 0) {
+                document.getElementById('players-info').innerText = 'No se encontraron jugadores.';
+                return;
             }
 
-            // Actualizamos la vista con los jugadores
-            renderPlayersInfo();
+            players.forEach(async (player) => {
+                const playerTag = player.tag.replace('#', '');  // Eliminar el # si está presente
+                const playerName = player.name;
+                const trophies = player.trophies;
+                const soloVictories = player.soloVictories;
+                const duoVictories = player.duoVictories;
+                const victories3vs3 = player['3vs3Victories'];
+
+                // Subir datos a Firebase
+                await set(ref(db, 'players/' + playerTag), {
+                    name: playerName,
+                    trophies: trophies,
+                    soloVictories: soloVictories,
+                    duoVictories: duoVictories,
+                    victories3vs3: victories3vs3
+                });
+            });
+
+            console.log('Datos de jugadores subidos a Firebase');
+            document.getElementById('players-info').innerHTML = `<p>Datos de jugadores actualizados exitosamente.</p>`;
         }
 
-        // Cargar la lista de jugadores automáticamente al cargar la página
-        document.addEventListener('DOMContentLoaded', renderPlayersInfo);
+        // Llamada para subir los datos
+        uploadPlayerData();
     </script>
+</head>
+<body>
+    <h1>Miembros del Club</h1>
+
+    <div id="players-info">
+        <p>Cargando jugadores...</p>
+    </div>
 </body>
 </html>
