--- a/index.html
+++ b/index.html
@@ -3,102 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miembros del Club</title>
-
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js";
-        import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.0.2/firebase-database.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyBW-gAKIG7FNanxtur3h2aROaB9XNON40Y",
-            authDomain: "juego-multijugador-45b97.firebaseapp.com",
-            databaseURL: "https://juego-multijugador-45b97-default-rtdb.firebaseio.com",
-            projectId: "juego-multijugador-45b97",
-            storageBucket: "juego-multijugador-45b97.appspot.com",
-            messagingSenderId: "182032480602",
-            appId: "1:182032480602:web:8e7c94b002ec54f3641b63",
-            measurementId: "G-VS7N0F3HF0"
-        };
-
-        // Inicializar Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getDatabase(app);
-
-        // Obtener la API Key desde el servidor
-        async function getApiKey() {
-            const response = await fetch('/apikey');
-            if (!response.ok) {
-                console.error('Error al obtener la API key');
-                return null;
-            }
-            const data = await response.json();
-            return data.apiKey;
-        }
-
-        // Función para obtener miembros del club
-        async function getClubMembers(apiKey) {
-            const clubTag = '2UVURRLCC'; // Tag del club
-            const encodedClubTag = encodeURIComponent(clubTag);  // Esto asegura que el # se convierta en %23
-            const response = await fetch(`https://api.brawlstars.com/v1/clubs/${encodedClubTag}/members`, {
-                method: 'GET',
-                headers: {
-                    'Authorization': `Bearer ${apiKey}`
-                }
-            });
-            if (!response.ok) {
-                console.error('Error al obtener los miembros del club');
-                return [];
-            }
-            const data = await response.json();
-            return data.items;
-        }
-
-        // Subir los datos de los jugadores a Firebase
-        async function uploadPlayerData() {
-            const apiKey = await getApiKey();
-            if (!apiKey) {
-                console.error('No se pudo obtener la API key');
-                return;
-            }
-
-            const players = await getClubMembers(apiKey);
-
-            if (players.length === 0) {
-                document.getElementById('players-info').innerText = 'No se encontraron jugadores.';
-                return;
-            }
-
-            players.forEach(async (player) => {
-                const playerTag = player.tag.replace('#', '');  // Eliminar el # si está presente
-                const playerName = player.name;
-                const trophies = player.trophies;
-                const soloVictories = player.soloVictories;
-                const duoVictories = player.duoVictories;
-                const victories3vs3 = player['3vs3Victories'];
-
-                // Subir datos a Firebase
-                await set(ref(db, 'players/' + playerTag), {
-                    name: playerName,
-                    trophies: trophies,
-                    soloVictories: soloVictories,
-                    duoVictories: duoVictories,
-                    victories3vs3: victories3vs3
-                });
-            });
-
-            console.log('Datos de jugadores subidos a Firebase');
-            document.getElementById('players-info').innerHTML = `<p>Datos de jugadores actualizados exitosamente.</p>`;
-        }
-
-        // Llamada para subir los datos
-        uploadPlayerData();
-    </script>
+    <title>Estadísticas del Jugador</title>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Miembros del Club</h1>
-
-    <div id="players-info">
-        <p>Cargando jugadores...</p>
+    <h1>Estadísticas del Jugador</h1>
+    <div id="player-info">
+        <p>Cargando información...</p>
     </div>
 </body>
 </html>
