--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estadísticas del Jugador</title>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
-    <script src="script.js" defer></script>
+    <title>Actualizar Jugadores</title>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-database.js"></script>
 </head>
 <body>
-    <h1>Estadísticas del Jugador</h1>
-    <div id="player-info">
-        <p>Cargando información...</p>
-    </div>
+    <h1>Estadísticas de Jugadores</h1>
+    <div id="player-info"></div>
+    
+    <script src="script.js"></script>
 </body>
 </html>
