Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actualizar Jugadores</title>
-    <!-- Firebase v8 CDN -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <title>Estadísticas de Jugadores</title>
 </head>
 <body>
     <h1>Estadísticas de Jugadores</h1>
-    <div id="player-info"></div>
+    <div id="player-info"></div> <!-- Aquí se mostrarán los datos del jugador -->
 
-    <!-- Script para la lógica del lado del cliente -->
+    <!-- Cargar el script.js -->
     <script type="module" src="script.js"></script>
 </body>
 </html>
