Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estadísticas de Jugadores</title>
+    <title>Juego Multijugador</title>
+    <script type="module" src="/script.js"></script>
 </head>
 <body>
-    <h1>Estadísticas de Jugadores</h1>
-    <div id="player-info"></div> <!-- Aquí se mostrarán los datos del jugador -->
-
-    <!-- Cargar el script.js -->
-    <script type="module" src="script.js"></script>
+    <h1>Bienvenido al juego multijugador</h1>
+    <div id="playerStats"></div>
 </body>
 </html>
