--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enviar Mensajes a Discord</title>
+    <link rel="shortcut icon" href="https://remodelacionesmartinez.com/Iconos/leaf.png" type="image/x-icon">
+  <link rel="shortcut icon" href="Icons/logo.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>App de utilidades | Leaf Labs ©</title>
+  <link rel="stylesheet" href="styles.css">
+  <script type="module" src="app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <h1>Enviar Mensaje a Discord</h1>
-    <form id="discordForm">
-        <label for="message">Mensaje:</label><br>
-        <textarea id="message" rows="4" cols="50" required></textarea><br><br>
-        <button type="submit">Enviar</button>
-    </form>
-
-    <script>
-        const webhookURL = "TU_WEBHOOK_DE_DISCORD";
-
-        document.getElementById("discordForm").addEventListener("submit", async (event) => {
-            event.preventDefault();
-            const message = document.getElementById("message").value;
-
-            const payload = {
-                content: message
-            };
-
-            try {
-                const response = await fetch(webhookURL, {
-                    method: "POST",
-                    headers: {
-                        "Content-Type": "application/json"
-                    },
-                    body: JSON.stringify(payload)
-                });
-
-                if (response.ok) {
-                    alert("Mensaje enviado a Discord");
-                } else {
-                    alert("Error al enviar el mensaje");
-                }
-            } catch (error) {
-                console.error("Error:", error);
-                alert("No se pudo conectar al webhook");
-            }
-        });
-    </script>
+  <div class="container">
+    <button id="logoutButton">Cerrar sesión</button>
+    
+    <h1>Gestión de utilidades</h1>
+    <div id="summary">
+      <h2>Total Pedidos: <span id="totalOrders">0</span></h2>
+    </div>
+    <div class="form">
+      <input type="text" id="orderName" placeholder="Nombre del Pedido">
+      <input type="text" id="orderQuantity" placeholder="Cantidad (opcional)">
+      <select id="orderStatus">
+        <option value="pending">Urgente</option>
+        <option value="in-progress">Muy Urgente</option>
+        <option value="completed">Necesario</option>
+      </select>
+      <button id="addOrder">Agregar</button>
+    </div>
+    <div class="orders">
+      <h2>Historial Arte y diseño</h2>
+      <ul id="orderList"></ul>
+    </div>
+  </div>
+  
+  <!-- Pie de página -->
+  <footer>
+    <p>&copy; 2025 Leaf Labs. Todos los derechos reservados.</p>
+    <p>Contacto: jose2001.recinos@gmail.com</p>
+  </footer>
 </body>
 </html>
