--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Leaf Labs - Un laboratorio creativo fundado por José Recinos, especializado en diseño e innovación">
+    <meta property="og:title" content="Leaf Labs - Laboratorio Creativo">
+    <meta property="og:description" content="Leaf Labs es un laboratorio creativo donde las ideas florecen. Fundado por José Recinos, especializado en diseño gráfico e innovación.">
+    <meta property="og:image" content="https://remodelacionesmartinez.com/Iconos/leaf.png">
+    <meta name="author" content="José Recinos">
+    <meta name="keywords" content="Leaf Labs, creatividad, diseño, innovación, José Recinos, laboratorio creativo">
+    <meta name="robots" content="index, follow">
     <title>Leaf Labs - Laboratorio Creativo</title>
     <link rel="shortcut icon" href="https://remodelacionesmartinez.com/Iconos/leaf.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>       
       <img class="lab-icon" src="https://remodelacionesmartinez.com/Iconos/leaf.png" alt="Leaf Labs Icon">
