--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="section">
         <h2>Sobre Nosotros</h2>
-        <p><strong>Leaf Labs</strong> nació en 2024, fundado por <Strong>José Recinos</Strong>, con la visión de ser un verdadero laboratorio de creatividad, donde cada diseño es cultivado con dedicación e innovación.</p>
+        <p><strong>Leaf Labs</strong> nació en 2024, fundado por <Strong>José Recinos</Strong>, con nacionalidad salvadoreña, con la visión de ser un verdadero laboratorio de creatividad, donde cada diseño es cultivado con dedicación e innovación.</p>
     </section>
 
     <section class="section">
@@ -67,4 +67,25 @@
         <p>&copy; 2024 Leaf Labs - Todos los derechos reservados.</p>
     </footer>
 </body>
+
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Leaf Labs",
+    "url": "https://remodelacionesmartinez.com/",
+    "logo": "https://remodelacionesmartinez.com/Iconos/leaf.png",
+    "sameAs": [
+      "https://www.facebook.com/JoseRecinosDev",
+      "https://www.linkedin.com/in/joserecinosdev/"
+    ],
+    "founder": {
+      "@type": "Person",
+      "name": "José Recinos",
+      "image": "https://media.licdn.com/dms/image/v2/D4E03AQEo1sVuy25_Ug/profile-displayphoto-shrink_800_800/B4EZT4m2SlGwAc-/0/1739337721913?e=1746057600&v=beta&t=Qt92OHr67LMNayO8a2yYp-GguL4iWdL1xJwxX59niII",
+      "url": "https://leaf-labs.vercel.app/"
+    }
+  }
+  </script>
+  
 </html>
