--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div class="portfolio">
             <div class="card">
-              <img src="https://scontent.fsal11-1.fna.fbcdn.net/v/t39.30808-6/481078307_122158610978370007_8340890883815359415_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=EMTxyYE0i3sQ7kNvgHjlRMd&_nc_oc=Adg6bj6AbSdPngGndvTY4pnJzf_ywTYuIZPN28IhcxsgBudd5iWZxH3JYQ581XkRrcY&_nc_zt=23&_nc_ht=scontent.fsal11-1.fna&_nc_gid=AukPIdvqF76tDwtjW4CtPON&oh=00_AYCAs_zHQyGybVh4cPPDTefr2ZpNcP9UOW6K4tqVCXRH4Q&oe=67C87195" alt="Logo 2">
+              <img src="https://remodelacionesmartinez.com/Iconos/logo.jpg" alt="Logo 2">
               <h3>Remodelaciones Martínez</h3>
               <p>Fecha de creación: 25 de Junio 2024</p>
               <p>Tipo de licencia: Reservada</p>
