--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 
     <section class="section">
-        <h2>Nuestro Portafolio</h2>
+        <h2>Portafolio</h2>
         <p style="margin-bottom: 20px;">Explora nuestros experimentos gráficos en el laboratorio de hojas:</p>
         
         <div class="portfolio">
