--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     </header>
 
     <section class="section">
-        <h2>Sobre Nosotros</h2>
-        <p><strong>Leaf Labs</strong> nació en 2024, fundado por <Strong>José Recinos</Strong>, con nacionalidad salvadoreña, con la visión de ser un verdadero laboratorio de creatividad, donde cada diseño es cultivado con dedicación e innovación.</p>
-    </section>
-
+        <h2>Sobre Leaf Labs</h2>
+        <p><strong>Leaf Labs</strong>, fundado en 2023 como <strong>Twenty-Two Entertainment Studios</strong>, es un estudio creativo creado por <strong>José Recinos</strong>, de nacionalidad salvadoreña. Con la visión de ser un verdadero laboratorio de creatividad, el estudio se transformó en <strong>Leaf Labs</strong>, donde cada diseño es cultivado con dedicación e innovación.</p>
+<hr>
     <section class="section">
         <h2>Portafolio</h2>
         <p style="margin-bottom: 20px;">Explora nuestros experimentos gráficos en el laboratorio de hojas:</p>
