Actualizar index.html

--- a/Libro/index.html
+++ b/Libro/index.html
@@ -14,8 +14,8 @@
   <h2>Contenido</h2>
   <ul>
     <li><a href="bienvenida.html">Bienvenida</a></li>
-    <li><a href="capitulo1.html">Capítulo 1 - La Incomodidad es Clave</a></li>
-    <li><a href="capitulo7.html">Capítulo 2 - El Precio del Enfoque</a></li>
+    <li><a href="cap2.html">Capítulo 1 - La Incomodidad es Clave</a></li>
+    <li><a href="cap1.html">Capítulo 2 - El Precio del Enfoque</a></li>
     <!-- Puedes agregar más capítulos -->
   </ul>
 </body>
