Actualizar bienvenida.html

--- a/Libro/bienvenida.html
+++ b/Libro/bienvenida.html
@@ -4,6 +4,29 @@
   <meta charset="UTF-8" />
   <title>Bienvenida - Del Polvo al Diamante</title>
   <link rel="stylesheet" href="estilo.css">
+  <style>
+    .boton-siguiente {
+      display: block;
+      margin: 60px auto 0;
+      padding: 12px 24px;
+      background-color: #d6c2a1;
+      border: none;
+      font-size: 1em;
+      font-family: 'Georgia', serif;
+      color: #2e2e2e;
+      text-decoration: none;
+      border-radius: 4px;
+      box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
+      transition: background-color 0.3s ease;
+      text-align: center;
+      width: fit-content;
+    }
+
+    .boton-siguiente:hover {
+      background-color: #c5b08e;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <h2>Bienvenida</h2>
@@ -13,5 +36,7 @@
   <p>Si estás leyendo esto, tal vez también estés en proceso de pulirte. De romper patrones. De soltar lo que pesa para tomar lo que transforma. Bienvenido. No estás solo. Este camino es duro, pero también digno.</p>
 
   <div class="autor">José Recinos<br/>Del Polvo al Diamante</div>
+
+  <a class="boton-siguiente" href="cap2.html">EMPEZAR A LEER...</a>
 </body>
 </html>
