Actualizar cap1.html

--- a/Libro/cap1.html
+++ b/Libro/cap1.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Capítulo 2 - La Incomodidad es Clave</title>
+  <title>Capítulo 1 - La Incomodidad es Clave</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <h2>Capítulo 2</h2>
+  <h2>Capítulo 1</h2>
   <h3>La Incomodidad es Clave</h3>
 
   <p>Nadie crece en la comodidad. Todo lo que duele te está empujando a un lugar nuevo. La incomodidad es el lenguaje del cambio.</p>
