Actualizar cap1.html

--- a/Libro/cap1.html
+++ b/Libro/cap1.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -18,5 +18,7 @@ DOCTYPE html>
   <p>El primer paso no es querer cambiar. Es dejar de mentirte. Es decirte la verdad, aunque duela. Aunque rompa. Porque el polvo es necesario... para hacer diamante.</p>
 
   <div class="autor">José Recinos<br/>Del Polvo al Diamante</div>
+
+  <a class="boton-siguiente" href="cap2.html">Siguiente capítulo</a>
 </body>
 </html>
